prevent scrollbar w/ right menu transform

--- a/resources/assets/css/components/menu.less
+++ b/resources/assets/css/components/menu.less
@@ -2,6 +2,7 @@
   .flexy(column);
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 .menu-header {
   .flex(0 0 @tile);
